// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "externalRuleEngine": "foo",
        "flows": [],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
  />
  <div
    className="issue-row-meta"
  >
    <div
      className="issue-meta-list"
    >
      <div
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            {
              "actions": [],
              "component": "main.js",
              "componentEnabled": true,
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "externalRuleEngine": "foo",
              "flows": [],
              "flowsWithType": [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </div>
      <div
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </div>
      <div
        className="issue-meta"
      >
        <ForwardRef(Link)
          className="js-issue-permalink link-no-underline"
          target="_blank"
          title="permalink"
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?issues=AVsae-CQS-9G3txfbFN2&open=AVsae-CQS-9G3txfbFN2&id=myproject",
            }
          }
        >
          <LinkIcon />
        </ForwardRef(Link)>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: with filter 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "externalRuleEngine": "foo",
        "flows": [],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
  />
  <div
    className="issue-row-meta"
  >
    <div
      className="issue-meta-list"
    >
      <div
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            {
              "actions": [],
              "component": "main.js",
              "componentEnabled": true,
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "externalRuleEngine": "foo",
              "flows": [],
              "flowsWithType": [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </div>
      <div
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </div>
      <div
        className="issue-meta"
      >
        <ForwardRef(Link)
          className="js-issue-permalink link-no-underline"
          target="_blank"
          title="permalink"
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?issues=AVsae-CQS-9G3txfbFN2&open=AVsae-CQS-9G3txfbFN2&id=myproject",
            }
          }
        >
          <LinkIcon />
        </ForwardRef(Link)>
      </div>
      <div
        className="issue-meta"
      >
        <SimilarIssuesFilter
          isOpen={false}
          issue={
            {
              "actions": [],
              "component": "main.js",
              "componentEnabled": true,
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "externalRuleEngine": "foo",
              "flows": [],
              "flowsWithType": [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": [],
              "type": "BUG",
            }
          }
          onFilter={[MockFunction]}
          togglePopup={[MockFunction]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: with multi locations 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [
          {
            "component": "main.js",
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          {
            "component": "main.js",
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
  />
  <div
    className="issue-row-meta"
  >
    <div
      className="issue-meta-list"
    >
      <div
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            {
              "actions": [],
              "component": "main.js",
              "componentEnabled": true,
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": [
                [
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
                [
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
              ],
              "flowsWithType": [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": [
                {
                  "component": "main.js",
                  "textRange": {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                {
                  "component": "main.js",
                  "textRange": {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
              ],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </div>
      <div
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </div>
      <div
        className="issue-meta"
      >
        <Tooltip
          overlay="issue.this_issue_involves_x_code_locations.7"
        >
          <LocationIndex>
            7
          </LocationIndex>
        </Tooltip>
      </div>
      <div
        className="issue-meta"
      >
        <ForwardRef(Link)
          className="js-issue-permalink link-no-underline"
          target="_blank"
          title="permalink"
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?issues=AVsae-CQS-9G3txfbFN2&open=AVsae-CQS-9G3txfbFN2&id=myproject",
            }
          }
        >
          <LinkIcon />
        </ForwardRef(Link)>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: with multi locations and link 1`] = `
<div
  className="issue-row"
>
  <IssueMessage
    branchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": false,
        "name": "branch-6.7",
      }
    }
    issue={
      {
        "actions": [],
        "component": "main.js",
        "componentEnabled": true,
        "componentLongName": "main.js",
        "componentQualifier": "FIL",
        "componentUuid": "foo1234",
        "creationDate": "2017-03-01T09:36:01+0100",
        "flows": [
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          [
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            {
              "component": "main.js",
              "textRange": {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
        ],
        "flowsWithType": [],
        "key": "AVsae-CQS-9G3txfbFN2",
        "line": 25,
        "message": "Reduce the number of conditional operators (4) used in the expression",
        "project": "myproject",
        "projectKey": "foo",
        "projectName": "Foo",
        "rule": "javascript:S1067",
        "ruleName": "foo",
        "secondaryLocations": [
          {
            "component": "main.js",
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
          {
            "component": "main.js",
            "textRange": {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ],
        "severity": "MAJOR",
        "status": "OPEN",
        "textRange": {
          "endLine": 26,
          "endOffset": 15,
          "startLine": 25,
          "startOffset": 0,
        },
        "transitions": [],
        "type": "BUG",
      }
    }
  />
  <div
    className="issue-row-meta"
  >
    <div
      className="issue-meta-list"
    >
      <div
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            {
              "actions": [],
              "component": "main.js",
              "componentEnabled": true,
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": [
                [
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
                [
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  {
                    "component": "main.js",
                    "textRange": {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
              ],
              "flowsWithType": [],
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": [
                {
                  "component": "main.js",
                  "textRange": {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                {
                  "component": "main.js",
                  "textRange": {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
              ],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </div>
      <div
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </div>
      <div
        className="issue-meta"
      >
        <ForwardRef(Link)
          target="_blank"
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?branch=branch-6.7&issues=AVsae-CQS-9G3txfbFN2&open=AVsae-CQS-9G3txfbFN2&id=myproject",
            }
          }
        >
          <Tooltip
            overlay="issue.this_issue_involves_x_code_locations.7"
          >
            <LocationIndex>
              7
            </LocationIndex>
          </Tooltip>
        </ForwardRef(Link)>
      </div>
      <div
        className="issue-meta"
      >
        <ForwardRef(Link)
          className="js-issue-permalink link-no-underline"
          target="_blank"
          title="permalink"
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?branch=branch-6.7&issues=AVsae-CQS-9G3txfbFN2&open=AVsae-CQS-9G3txfbFN2&id=myproject",
            }
          }
        >
          <LinkIcon />
        </ForwardRef(Link)>
      </div>
    </div>
  </div>
</div>
`;
